# backend/docs/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "http"
+        "https"
     ],
     "swagger": "2.0",
     "info": {
@@ -9,7 +9,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "dispatched-blond-resolved-graduated.trycloudflare.com",
     "basePath": "/",
     "paths": {
         "/api/v1/external/banners": {
